err/microservices.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_API-1.1b1.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.6.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/amqp'...
Listing './lib/python3.5/site-packages/amqp-2.2.2.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_api'...
Listing './lib/python3.5/site-packages/flask_api/static'...
Listing './lib/python3.5/site-packages/flask_api/static/css'...
Listing './lib/python3.5/site-packages/flask_api/static/img'...
Listing './lib/python3.5/site-packages/flask_api/static/js'...
Listing './lib/python3.5/site-packages/flask_api/templates'...
Listing './lib/python3.5/site-packages/flask_api/tests'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/kombu'...
Listing './lib/python3.5/site-packages/kombu/async'...
Listing './lib/python3.5/site-packages/kombu/async/aws'...
Listing './lib/python3.5/site-packages/kombu/async/aws/sqs'...
Listing './lib/python3.5/site-packages/kombu/async/http'...
Listing './lib/python3.5/site-packages/kombu/transport'...
Listing './lib/python3.5/site-packages/kombu/transport/sqlalchemy'...
Listing './lib/python3.5/site-packages/kombu/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/utils'...
Listing './lib/python3.5/site-packages/kombu-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/microservices'...
Listing './lib/python3.5/site-packages/microservices/helpers'...
Compiling './lib/python3.5/site-packages/microservices/helpers/__init__.py'...
Compiling './lib/python3.5/site-packages/microservices/helpers/logs.py'...
Listing './lib/python3.5/site-packages/microservices/http'...
Compiling './lib/python3.5/site-packages/microservices/http/__init__.py'...
Compiling './lib/python3.5/site-packages/microservices/http/helpers.py'...
Compiling './lib/python3.5/site-packages/microservices/http/renderers.py'...
Compiling './lib/python3.5/site-packages/microservices/http/resources.py'...
Compiling './lib/python3.5/site-packages/microservices/http/runners.py'...
Compiling './lib/python3.5/site-packages/microservices/http/service.py'...
Compiling './lib/python3.5/site-packages/microservices/http/settings.py'...
Listing './lib/python3.5/site-packages/microservices/http/static'...
Listing './lib/python3.5/site-packages/microservices/http/static/css'...
Listing './lib/python3.5/site-packages/microservices/http/static/img'...
Listing './lib/python3.5/site-packages/microservices/http/static/js'...
Listing './lib/python3.5/site-packages/microservices/http/templates'...
Listing './lib/python3.5/site-packages/microservices/queues'...
Compiling './lib/python3.5/site-packages/microservices/queues/__init__.py'...
Compiling './lib/python3.5/site-packages/microservices/queues/client.py'...
Compiling './lib/python3.5/site-packages/microservices/queues/runners.py'...
Compiling './lib/python3.5/site-packages/microservices/queues/service.py'...
Listing './lib/python3.5/site-packages/microservices/utils'...
Compiling './lib/python3.5/site-packages/microservices/utils/__init__.py'...
Listing './lib/python3.5/site-packages/microservices/utils/templates'...
Listing './lib/python3.5/site-packages/microservices-0.29.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/vine'...
Listing './lib/python3.5/site-packages/vine-1.1.4.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
